--- a/Chrome Extensions/momentum-clone/src/standalone/standalone.html
+++ b/Chrome Extensions/momentum-clone/src/standalone/standalone.html
@@ -7,6 +7,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+    <!-- Main entry point for templated app -->
     <div id="app"></div>
   </body>
 </html>
